Fix overflow hidden body

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,10 +24,3 @@ body {
     padding: 0;
 }
 
-html, body {
-    height: 100%!important;
-}
-
-body {
-    overflow: hidden!important;
-}
